--- a/src/main/webapp/WEB-INF/views/student/all.html
+++ b/src/main/webapp/WEB-INF/views/student/all.html
@@ -10,6 +10,10 @@
         <a th:href="@{/students/{id}(id=${student.getId()})}" th:text="${student.getName()} +
         ' '+ ${student.getSurname()}">user</a>
     </div>
+    <br>
+    <form action="/students/new">
+        <input style="color:blue" type="submit" value="ADD">
+    </form>
 </center>
 </body>
 </html>
