add delete bottom in all groups/students/tutors page

--- a/src/main/webapp/WEB-INF/views/group/all.html
+++ b/src/main/webapp/WEB-INF/views/group/all.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" >
+    <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <center>
     <div th:each="group : ${groups}">
-        <a th:href="@{/groups/{id}(id=${group.getId()})}" th:text="${group.getId()} + 'Group number - ' + ${group.getId()}">user</a>
+        <a th:href="@{/groups/{id}(id=${group.getId()})}"
+           th:text="${group.getId()} + 'Group number - ' + ${group.getId()}">user</a>
+        <form th:action="@{/groups/{id}/delete(id=${group.getId()})}">
+            <input style="color:orangered" type="submit" value="DELETE">
+        </form>
     </div>
     <br>
     <form action="/groups/new">
