--- a/src/main/webapp/WEB-INF/views/tutor/all.html
+++ b/src/main/webapp/WEB-INF/views/tutor/all.html
@@ -9,6 +9,9 @@
     <div th:each="tutor : ${tutors}">
         <a th:href="@{/tutors/{id}(id=${tutor.getId()})}" th:text="${tutor.getName()} +
         ' '+ ${tutor.getSurname()} +' - ' + ${tutor.getQualification()}">user</a>
+        <form th:action="@{/tutors/{id}/delete(id=${tutor.id})}">
+            <input style="color:orangered" type="submit" value="DELETE">
+        </form>
     </div>
     <br>
     <form action="/tutors/new">
