--- a/src/main/webapp/WEB-INF/views/tutor/update.html
+++ b/src/main/webapp/WEB-INF/views/tutor/update.html
@@ -12,7 +12,7 @@
     <input type="text" id="surname" th:field="*{surname}"/>
     <label for="qualification"> Qualification</label>
     <input type="text" id= "qualification" th:field="*{qualification}"/>
-    <input type="submit" value="ADD">
+    <input type="submit" value="UPDATE">
 </form>
 </body>
 </html>
