--- a/src/main/webapp/WEB-INF/views/student/update.html
+++ b/src/main/webapp/WEB-INF/views/student/update.html
@@ -12,7 +12,7 @@
     <input type="text" id="surname" th:field="*{surname}"/>
     <label for="groupNumber"> Group Number</label>
     <input type="text" id="groupNumber" th:field="*{groupNumber}"/>
-    <input type="submit" value="ADD">
+    <input type="submit" value="UPDATE">
 </form>
 </body>
 </html>
