--- a/src/main/webapp/WEB-INF/views/tutor/all.html
+++ b/src/main/webapp/WEB-INF/views/tutor/all.html
@@ -12,6 +12,9 @@
         <form th:action="@{/tutors/{id}/delete(id=${tutor.id})}">
             <input style="color:orangered" type="submit" value="DELETE">
         </form>
+        <form th:action="@{/tutors/{id}/update(id=${tutor.getId()})}">
+            <input style="color:orange" type="submit" value="UPDATE">
+        </form>
     </div>
     <br>
     <form action="/tutors/new">
