add update bottoms to group/student/tutor page

--- a/src/main/webapp/WEB-INF/views/group/getGroup.html
+++ b/src/main/webapp/WEB-INF/views/group/getGroup.html
@@ -13,6 +13,9 @@
     <form th:action="@{/groups/{id}/delete(id=${group.id})}">
         <input style="color:orangered" type="submit" value="DELETE">
     </form>
+    <form th:action="@{/groups/{id}/update(id=${group.getId()})}">
+        <input style="color:orange" type="submit" value="UPDATE">
+    </form>
 </center>
 </body>
 </html>
