refactor - change attribute name and request parameter name to world

--- a/src/main/webapp/WEB-INF/views/search.html
+++ b/src/main/webapp/WEB-INF/views/search.html
@@ -6,6 +6,11 @@
 </head>
 <body>
 <center>
+    <form th:action="@{/search(string=${word})}">
+        <label for="searchWord"></label>
+        <input type="text" id="searchWord" th:field ="${word}">
+        <input type="submit" value="Search">
+    </form>
     <h1>From groups</h1>
     <div th:each="group : ${groups}">
         <a th:href="@{/groups/{id}(id=${group.id})}" th:text="'Group number - ' + ${group.getId()}"></a>
