--- a/src/main/webapp/WEB-INF/views/group/getGroup.html
+++ b/src/main/webapp/WEB-INF/views/group/getGroup.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <center>
-    <h1 th:text="'group number -'+${group.getId()}"></h1>
+    <h1 th:text="'Group number -'+${group.getId()}"></h1>
     <hr>
     <h2>
         <a th:href="@{/tutors/{id}(id=${group.getTutorId()})}" th:text="'Tutor link'">Edit</a>
@@ -18,6 +18,7 @@
     <form th:action="@{/groups/{id}/update(id=${group.getId()})}">
         <input style="color:orange" type="submit" value="UPDATE">
     </form>
+    <a th:href="@{/groups/{id}(id = ${group.getId()}, fullinfo='true')}" th:text="'Full info about Group'"></a>
 </center>
 </body>
 </html>
