--- a/src/main/webapp/WEB-INF/views/student/add.html
+++ b/src/main/webapp/WEB-INF/views/student/add.html
@@ -13,6 +13,9 @@
     <label for="groupNumber"> Group Number</label>
     <input type="text" id="groupNumber" th:field="*{groupNumber}"/>
     <input type="submit" value="ADD">
+    <div style="color: darkred" th:if="${#fields.hasErrors('name')}" th:errors = "${student.name}"></div>
+    <div style="color: darkred" th:if="${#fields.hasErrors('surname')}" th:errors = "${student.surname}"></div>
+    <div style="color: darkred" th:if="${#fields.hasErrors('groupNumber')}" th:errors = "${student.groupNumber}"></div>
 </form>
 </body>
 </html>
