--- a/src/main/webapp/WEB-INF/views/tutor/update.html
+++ b/src/main/webapp/WEB-INF/views/tutor/update.html
@@ -13,6 +13,9 @@
     <label for="qualification"> Qualification</label>
     <input type="text" id= "qualification" th:field="*{qualification}"/>
     <input type="submit" value="UPDATE">
+    <div style="color: darkred" th:if="${#fields.hasErrors('name')}" th:errors="${tutor.name}"></div>
+    <div style="color: darkred" th:if="${#fields.hasErrors('surname')}" th:errors="${tutor.surname}"></div>
+    <div style="color: darkred" th:if="${#fields.hasErrors('qualification')}" th:errors="${tutor.qualification}"></div>
 </form>
 </body>
 </html>
