--- a/src/main/webapp/WEB-INF/views/group/getGroup.html
+++ b/src/main/webapp/WEB-INF/views/group/getGroup.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        a{
+            background: greenyellow;
+        }
+        a:hover{
+            transform: scale(1.1);
+            background: green;
+        }
+    </style>
 </head>
 <body>
 <center>
