--- a/src/main/webapp/WEB-INF/views/group/add.html
+++ b/src/main/webapp/WEB-INF/views/group/add.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        input{
+            color: blue;
+        }
+        input:hover{
+            color: deepskyblue;
+        }
+    </style>
 </head>
 <body>
 <form th:method="POST" th:action="@{/groups}" th:object="${group}">
