--- a/src/main/webapp/WEB-INF/views/tutor/delete.html
+++ b/src/main/webapp/WEB-INF/views/tutor/delete.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        input{
+            color: red;
+        }
+        input:hover{
+            color: darkred;
+        }
+    </style>
 </head>
 <body>
 <center>
